# lrdisc

./: pyproject.toml
lrdisc/: 2nd_step_position_discrimination.py  multiple_position_discrimination.py  pavlovian_with_lrleds.py
lrdisc/config/: multiple_position_discrimination_sample.yaml  pavlovian_with_lrleds_sample.yaml
